Spacing issue on a mobile

--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ li {
     }
 
     #console {
-        width: 180px;
+        width: 200px;
     }
 
     #logo-tablet {
